fhir/6.0.0/POST_EpisodeOfCare_update-care-teams.md
# POST Episode Of Care Update Care Teams - eHealth Infrastructure v6.0.0

* [**Table of Contents**](toc.md)
* **POST Episode Of Care Update Care Teams**

## POST Episode Of Care Update Care Teams

`POST [base]/EpisodeOfCare/1770/$update-care-teams`

**Header**

```
Accept-Charset: utf-8
Authorization: Bearer eyJhbGciOiJub25lIn0.eyJ1c2VyX2lkIjoiaHR0cHM6Ly9vcmdhbml6YXRpb24uY2l0LWNhcmVwbGFuLTMwMzgubG9jYWwvZmhpci9QcmFjdGl0aW9uZXIvODE4MjQiLCJyZWFsbV9hY2Nlc3MiOnsicm9sZXMiOlsiRXBpc29kZU9mQ2FyZS5zZWFyY2giLCJFcGlzb2RlT2ZDYXJlLnJlYWQiLCJDYXJlUGxhbi5yZWFkIiwiRXBpc29kZU9mQ2FyZSR1cGRhdGUtY2FyZS10ZWFtcyIsIiR0ZXN0LW9ubHktY3JlYXRlIiwiRXBpc29kZU9mQ2FyZS5wYXRjaCJdfSwidXNlcl90eXBlIjoiU1lTVEVNIn0.
Accept: application/fhir+json;q=1.0, application/json+fhir;q=0.9
User-Agent: HAPI-FHIR/6.10.5 (FHIR Client; FHIR 4.0.1/R4; apache)
Accept-Encoding: gzip
Content-Type: application/fhir+json; charset=UTF-8

```

**Body**:

```
{
  "resourceType": "Parameters",
  "parameter": [
    {
      "name": "addCareteams",
      "valueReference": {
        "reference": "https://organization.cit-careplan-3038.local/fhir/CareTeam/98822"
      }
    },
    {
      "name": "removeCareteams",
      "valueReference": {
        "reference": "https://organization.cit-careplan-3038.local/fhir/CareTeam/98949"
      }
    }
  ]
}

```

**Response**

```
{
  "resourceType": "EpisodeOfCare",
  "id": "1770",
  "meta": {
    "versionId": "2",
    "lastUpdated": "2025-02-04T15:17:55.301+00:00",
    "source": "#9a68bc32-103b-4d8d-8779-dc8fc542ab34",
    "profile": [
      "http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-episodeofcare"
    ]
  },
  "extension": [
    {
      "url": "http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-episodeofcare-caremanagerOrganization",
      "valueReference": {
        "reference": "https://organization.cit-careplan-3038.local/fhir/Organization/22056"
      }
    },
    {
      "url": "http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-teamHistory",
      "extension": [
        {
          "url": "careTeam",
          "valueReference": {
            "reference": "https://organization.cit-careplan-3038.local/fhir/CareTeam/98822"
          }
        },
        {
          "url": "period",
          "valuePeriod": {
            "start": "2025-02-04T15:17:55+00:00"
          }
        }
      ]
    }
  ],
  "status": "active",
  "statusHistory": [
    {
      "status": "active",
      "period": {
        "start": "2025-02-04T15:17:54+00:00"
      }
    }
  ],
  "diagnosis": [
    {
      "condition": {
        "reference": "https://careplan.cit-careplan-3038.local/fhir/Condition/1769"
      },
      "rank": 1
    }
  ],
  "patient": {
    "reference": "https://patient.cit-careplan-3038.local/fhir/Patient/72366"
  },
  "managingOrganization": {
    "reference": "https://organization.cit-careplan-3038.local/fhir/Organization/22056"
  },
  "period": {
    "start": "1970-01-01T00:00:01+00:00",
    "end": "1970-01-01T00:01:40+00:00"
  },
  "team": [
    {
      "reference": "https://organization.cit-careplan-3038.local/fhir/CareTeam/8342"
    },
    {
      "reference": "https://organization.cit-careplan-3038.local/fhir/CareTeam/98822"
    }
  ]
}

```

